[gd_scene load_steps=11 format=3 uid="uid://bj20f8efqvq8x"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_2f8j2"]
[ext_resource type="Script" path="res://scripts/player/camera.gd" id="2_gljcx"]
[ext_resource type="Script" path="res://scripts/player/reticle.gd" id="4_rvq42"]
[ext_resource type="Shader" path="res://assets/shaders/postprocesing.gdshader" id="6_ijvbn"]
[ext_resource type="Script" path="res://scripts/player/power_up_manager.gd" id="6_r4lie"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3rsb5"]
radius = 0.3
height = 1.8

[sub_resource type="QuadMesh" id="QuadMesh_rjwg0"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="Shader" id="Shader_tcy1d"]
code = "// Converted from https://www.shadertoy.com/view/td2GzW
shader_type canvas_item;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

// Anti fish eye (negative amount) / fish eye (positive)
uniform float effect_amount : hint_range(-2.5, 2.5) = 1.0;

void fragment() {
	// glsl -> godot shader
	vec2 iResolution = 1.0 / SCREEN_PIXEL_SIZE;
	vec4 fragCoord = FRAGCOORD;

	//normalized coords 
	vec2 p = fragCoord.xy / iResolution.x;

	//screen proroption
	float prop = iResolution.x / iResolution.y;

	//center coords
	vec2 m = vec2(0.5, 0.5 / prop);

	//vector from center to current fragment
	vec2 d = p - m;

	// distance of pixel from center
	float r = sqrt(dot(d, d)); 

	float power = effect_amount;

	//radius of 1:1 effect
	float bind;
	
	//stick to borders
	if (power > 0.0) 
		bind = sqrt(dot(m, m));
	else {
		if (prop < 1.0) 
    		bind = m.x; 
    	else 
        	bind = m.y;
	}

	vec2 uv;
	//fisheye
	if (power > 0.0)
		uv = m + normalize(d) * tan(r * power) * bind / tan( bind * power);
	//antifisheye
	else if (power < 0.0)
		uv = m + normalize(d) * atan(r * -power * 10.0) * bind / atan(-power * bind * 10.0);
	//no effect for power = 1.0
	else
		uv = p;
    uv.y *= prop;

	vec3 col = texture(SCREEN_TEXTURE, uv).rgb;
    
	COLOR = vec4(col, 1.0);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kmbq3"]
shader = SubResource("Shader_tcy1d")
shader_parameter/effect_amount = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cv6qa"]
shader = ExtResource("6_ijvbn")
shader_parameter/grain_amount = 0.05
shader_parameter/grain_size = 0.5
shader_parameter/effect_amount = 1.5
shader_parameter/mask_softness = 1.4
shader_parameter/mask_threshold = 0.6
shader_parameter/sort = 0.0

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_2f8j2")
speed = 15.0
jump_height = 2.0
fire_rate = 15.0

[node name="PowerUpManager" type="Node3D" parent="."]
script = ExtResource("6_r4lie")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(0.999986, -0.00523596, 0, 0.00523596, 0.999986, 0, 0, 0, 1, 0, 1.45912, 0)
fov = 80.0
near = 0.223
script = ExtResource("2_gljcx")
max_tilt_angle = 3.0

[node name="ShootRayCast" type="RayCast3D" parent="Camera"]
collision_mask = 2
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="CShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_3rsb5")

[node name="Viewport" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.32232e-12, 0, 4.88853e-11, 1, 0, 0, 1.16415e-10, 1, 2.19416e-10, 1, -2.32831e-10)
visible = false
layers = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_rjwg0")
surface_material_override/0 = SubResource("ShaderMaterial_kmbq3")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Postprocesing" type="ColorRect" parent="GUI"]
material = SubResource("ShaderMaterial_cv6qa")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="GUI" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rvq42")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")
RETICLE_DISTANCE = 1.0
HITMARKER_COLOR = Color(1, 1, 1, 1)

[node name="Top" type="Line2D" parent="GUI/CenterContainer"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="GUI/CenterContainer"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="GUI/CenterContainer"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="GUI/CenterContainer"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="HUDContainer" type="Control" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BottomHUDContainer" type="HBoxContainer" parent="GUI/HUDContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -45.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeftElements" type="VBoxContainer" parent="GUI/HUDContainer/BottomHUDContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="GUI/HUDContainer/BottomHUDContainer/LeftElements"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthText" type="Label" parent="GUI/HUDContainer/BottomHUDContainer/LeftElements/HealthBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
grow_vertical = 2
text = "100"
vertical_alignment = 1

[node name="DashBar" type="ProgressBar" parent="GUI/HUDContainer/BottomHUDContainer/LeftElements"]
visible = false
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="DashBarDouble" type="HBoxContainer" parent="GUI/HUDContainer/BottomHUDContainer/LeftElements"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="DashBar1" type="ProgressBar" parent="GUI/HUDContainer/BottomHUDContainer/LeftElements/DashBarDouble"]
custom_minimum_size = Vector2(99, 10)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="DashBar2" type="ProgressBar" parent="GUI/HUDContainer/BottomHUDContainer/LeftElements/DashBarDouble"]
custom_minimum_size = Vector2(99, 10)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="RightElements" type="HBoxContainer" parent="GUI/HUDContainer/BottomHUDContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="CurrentAmmo" type="Label" parent="GUI/HUDContainer/BottomHUDContainer/RightElements"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "30"
vertical_alignment = 1

[node name="MaxAmmo" type="Label" parent="GUI/HUDContainer/BottomHUDContainer/RightElements"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 22
text = "/30"
vertical_alignment = 1

[node name="DeathScreenContainer" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackScreen" type="ColorRect" parent="GUI/DeathScreenContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Text" type="Label" parent="GUI/DeathScreenContainer/BlackScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "Has muerto primo
[R] para reiniciar"
horizontal_alignment = 1

[node name="FloorCheck" type="RayCast3D" parent="."]
collision_mask = 7
collide_with_areas = true
